# rusty-algorithms

./: Cargo.toml  README.md
bin_packing/first_fit/: Cargo.toml
bin_packing/first_fit/src/: lib.rs  main.rs
bin_packing/first_fit_decreasing/: Cargo.toml
bin_packing/first_fit_decreasing/src/: lib.rs  main.rs
sorting/: Cargo.toml
sorting/benches/: sort.rs
sorting/src/: bubble_sort.rs  lib.rs  main.rs  quick_sort.rs  shared.rs
